<?xml version="1.0"?>
<package format="2">
  <name>ar_pose</name>
  <version>0.0.0</version>

  <description>
  Augmented Reality Marker Pose Estimation using ARToolkit
  </description>

  <author>Ivan Dryanovsk</author>
  <author email="bill@neautomation.com">Bill Morris</author>
  <author>Gautier Dumonteil</author>
  <maintainer email="bill@neautomation.com">Bill Morris</maintainer>
  <maintainer email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</maintainer>
  <maintainer email="max.schwarz@online.de">Max Schwarz</maintainer>
  <maintainer email="procopiostein@gmail.com">Procópio Stein</maintainer>
  <url type="website">http://ros.org/wiki/ar_pose</url>
  <url type="bugtracker">https://github.com/ar-tools/ar_tools/issues</url>
  <url type="repository">https://github.com/ar-tools/ar_tools</url>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>resource_retriever</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_runtime</depend>
  <build_depend>glut</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
</package>
